--- a/cmdtools/gateway/assemblies/qrcodeslice/properties/Assembly.properties
+++ b/cmdtools/gateway/assemblies/qrcodeslice/properties/Assembly.properties
@@ -1,10 +1,12 @@
-rhub.ports.uc.person=http://47.105.165.186/uc/person/self.service
-rhub.ports.uc.auth=http://47.105.165.186/uc/auth.service
-rhub.ports.robot=http://47.105.165.186/robot/hub.ports
+#rhub.ports.uc.person=http://47.105.165.186/uc/person/self.service
+#rhub.ports.uc.auth=http://47.105.165.186/uc/auth.service
+#rhub.ports.uc.product=http://47.105.165.186/uc/product.ports
+#rhub.ports.robot=http://47.105.165.186/robot/hub.ports
 
-#rhub.ports.uc.person=http://172.31.210.93/uc/person/self.service
-#rhub.ports.uc.auth=http://172.31.210.93/uc/auth.service
-#rhub.ports.robot=http://172.31.210.93/robot/hub.ports
+rhub.ports.uc.person=http://172.31.210.93/uc/person/self.service
+rhub.ports.uc.auth=http://172.31.210.93/uc/auth.service
+rhub.ports.uc.product=http://172.31.210.93/uc/product.ports
+rhub.ports.robot=http://172.31.210.93/robot/hub.ports
 
 autologin.anonymous=#_anonymous
 autologin.password=*_anonymous
