--- a/cmdtools/gateway/assemblies/qrcodeslice/properties/Assembly.properties
+++ b/cmdtools/gateway/assemblies/qrcodeslice/properties/Assembly.properties
@@ -1,12 +1,16 @@
+#开发环境开始
 #rhub.ports.uc.person=http://47.105.165.186/uc/person/self.service
 #rhub.ports.uc.auth=http://47.105.165.186/uc/auth.service
 #rhub.ports.uc.product=http://47.105.165.186/uc/product.ports
 #rhub.ports.robot=http://47.105.165.186/robot/hub.ports
+#开发环境结束
 
+#生产环境开始
 rhub.ports.uc.person=http://172.31.210.93/uc/person/self.service
 rhub.ports.uc.auth=http://172.31.210.93/uc/auth.service
 rhub.ports.uc.product=http://172.31.210.93/uc/product.ports
 rhub.ports.robot=http://172.31.210.93/robot/hub.ports
+#生产环境结束
 
 autologin.anonymous=#_anonymous
 autologin.password=*_anonymous
@@ -84,3 +88,4 @@ site.http.mime.zip=application/zip
 site.http.mime.gz=application/x-gzip
 site.http.mime.css=text/css
 site.http.mime.apk=application/octet-stream
+site.http.mime.map=application/x-javascript
